# solitude

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: solitudeConfig.cmake.in
include/eirian/: Buffer.h  Channel.hpp  Epoll.h  EventLoop.hpp  InetAddress.hpp  TcpConnection.hpp  TcpServer.hpp  logger.hpp  socket.hpp
include/solitude/: Channel.hpp  Epoll.hpp  EventLoop.hpp  InetAddress.hpp  Socket.hpp  TcpConnection.hpp  TcpServer.hpp
src/: Buffer.cpp  Channel.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp  logger.cpp  main.cpp  socket.cpp
test/: testEpoll.cpp  testInetAddress.cpp  testSocket.cpp
